# stem-cell

./: .dockerignore  .env.example  .gitignore  .mise.toml  AGENTS.md  Cargo.toml  Dockerfile  README.md
crates/fully-local/: .env.example  Cargo.toml  README.md  rust-toolchain.toml
crates/fully-local/src/: main.rs
crates/opencode-client/: Cargo.toml
crates/opencode-client/src/: client.rs  error.rs  lib.rs  process.rs  sse.rs  types.rs
crates/resource-model-macro/src/: codegen.rs  lib.rs  spec.rs  validate.rs
crates/runtime/: Cargo.toml  build.rs
crates/runtime/specs/: self.yaml
crates/runtime/src/: assets.rs  events.rs  github_app.rs  github_setup.rs  github_webhook.rs  lib.rs  main.rs  migrate_auth.rs  proxy.rs
crates/runtime/src/auth/: admin_guard.rs  config.rs  mod.rs  models.rs  oauth.rs  password.rs  repository.rs  routes.rs
crates/runtime/src/systems/: cleanup_deployments.rs  connect_github_installation.rs  connect_repo_to_project.rs  create_repo_from_template.rs  github_common.rs  mod.rs  open_experiment_pull_request.rs  purchase_product.rs  push_project_changes_to_repo.rs  refresh_github_installation_state.rs  run_build.rs  spawn_environment.rs  start_experiment_branch.rs
crates/runtime/tests/contracts/: connect_github_installation.rs  connect_repo_to_project.rs  create_repo_from_template.rs  main.rs  notification_provider_integration.rs  open_experiment_pull_request.rs  payment_provider_integration.rs  purchase_product.rs  push_project_changes_to_repo.rs  refresh_github_installation_state.rs  run_build.rs  spawn_environment.rs  start_experiment_branch.rs
crates/stem-cli/: Cargo.toml
crates/stem-cli/src/: agent.rs  checks.rs  cli.rs  clone_cmd.rs  doctor.rs  heal.rs  init.rs  main.rs  modify.rs  repo.rs
crates/stem-cli/tests/: init_integration.rs
crates/stem-git/: Cargo.toml
crates/stem-git/src/: error.rs  git.rs  github.rs  lib.rs  redaction.rs
crates/stem-projects/: Cargo.toml
crates/stem-projects/src/: clone.rs  error.rs  install.rs  lib.rs  manifest.rs  patch.rs  template.rs
crates/stem-sandbox/: Cargo.toml
crates/stem-sandbox/src/: cleanup.rs  command.rs  error.rs  health.rs  lib.rs  workspace.rs
crates/system-model-macro/src/: codegen.rs  spec.rs  validate.rs
crates/systems-codegen/: Cargo.toml
crates/systems-codegen/src/: main.rs
frontend/: astro.config.mjs  package-lock.json  package.json
frontend/public/: robots.txt  sitemap.xml
frontend/src/components/: HeroPrompt.tsx  InstallGithubAppButton.tsx  ProjectView.tsx  SignupInviteModal.tsx
frontend/src/components/ui/: ai-prompt-box.tsx  analysis-loader.tsx  hero-shader.tsx  image-loading.tsx  landing-hero.tsx
frontend/src/layouts/: Base.astro
frontend/src/pages/: index.astro  settings.astro
frontend/src/pages/admin/: build_jobs.astro  categories.astro  clients.astro  comments.astro  contracts.astro  departments.astro  github_installations.astro  index.astro  invoices.astro  line_items.astro  milestones.astro  organizations.astro  payments.astro  projects.astro  repo_connections.astro  roles.astro  sprints.astro  tasks.astro  time_entries.astro  users.astro
frontend/src/pages/admin/systems/: connect_github_installation.astro  connect_repo_to_project.astro  create_repo_from_template.astro  disconnect_repo_from_project.astro  mark_repo_lifecycle_state.astro  open_experiment_pull_request.astro  purchase_product.astro  push_project_changes_to_repo.astro  refresh_github_installation_state.astro  spawn_environment.astro  start_experiment_branch.astro
frontend/src/pages/github/: install.astro
frontend/src/pages/project/: index.astro
resource-model-macro/src/: codegen.rs
specs/: self.yaml  systems.yaml
src/: main.rs
