[workspace]
resolver = "2"
members = [
    "crates/resource-model-macro",
    "crates/system-model-macro",
    "crates/systems-codegen",
    "crates/opencode-client",
    "crates/runtime",
    "crates/stem-cli",
    "crates/stem-git",
    "crates/stem-projects",
    "crates/stem-sandbox",
    "crates/fully-local",
]
