[package]
name = "stem-git"
version = "0.1.0"
edition = "2024"
description = "Shared non-interactive Git and GitHub App primitives for Stem Cell runtime and CLI."

[dependencies]
tokio = { version = "1", features = ["process", "time", "fs", "macros"] }
tracing = "0.1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
hmac = "0.12"
sha2 = "0.10"
subtle = "2"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }
